# labas7

./: CMakeLists.txt
List/: CMakeLists.txt  List_main.cpp
listlib/: CMakeLists.txt  List.cpp  List.h
listtest/: CMakeLists.txt  ListTest.cpp
