Ô ªøcmake_minimum_required(VERSION 2.8)
#√è√∞√Æ√¢√•√∞√™√† √¢√•√∞√±√®√® CMake.
    set(PROJECT_NAME TList)
#√ë√Æ√ß√§√†√•√¨ √Æ√°√ª√∑√≠√≥√æ √´√Æ√™√†√´√º√≠√≥√æ √Ø√•√∞√•√¨√•√≠√≠√≥√æ √± √®√¨√•√≠√•√¨ √Ø√∞√Æ√•√™√≤√†
    project($
	    {
	    PROJECT_NAME}

)
#√ç√†√ß√¢√†√≠√®√• √Ø√∞√Æ√•√™√≤√†
    set(List List)
    set(listlib listlib)
    set(listtest listtest)
    set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs"
	FORCE)
#√ë√Æ√ß√§√†√•√≤√±√ø √Ø√•√∞√•√¨√•√≠√≠√†√ø CMAKE_CONFIGURATION_TYPES √±√Æ √ß√≠√†√∑√•√≠√®√•√¨ "Debug;Release" √® √¨√•√≤√™√Æ√©/√∞√†√ß√§√•√´√Æ√¨ Configs, √Ø√•√∞√•√¨√•√≠√≠√†√ø √±√Æ√µ√∞√†√≠√®√•√≤√±√ø √¢ √±√Ø√•√∂√®√†√´√º√≠√Æ√¨ √¥√†√©√´√• √§√Æ√±√≤√≥√Ø√≠√Æ√¨ √®√ß √¢√±√•√µ √¥√†√©√´√Æ√¢,
    if (NOT CMAKE_BUILD_TYPE)
#√Ø√∞√Æ√¢√•√∞√™√† √®√¨√•√æ√π√®√µ√±√ø √≥ √™√Æ√¨√Ø√®√´√ø√≤√Æ√∞√† √¢√†√∞√®√†√≠√≤√Æ√¢ √±√°√Æ√∞√™√®
    set(CMAKE_BUILD_TYPE Release)
#√Ö√±√´√® √≠√•√≤ √≤√Æ √≥√±√≤√†√≠√†√¢√´√®√¢√†√•√¨ Release
	endif()
	include_directories($
			    {
			    CMAKE_CURRENT_SOURCE_DIR}
			    /listlib)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/gtest)
    add_subdirectory(List)
    add_subdirectory(listlib)
    add_subdirectory(listtest)
    add_subdirectory(gtest)
    file(GLOB hdrs "*.h*")
#√Ñ√Æ√°√†√¢√´√ø√•√¨ √¢ √Ø√•√∞√•√¨√•√≠√≠√≥√æ hdrs √¢√±√• √¥√†√©√´√ª √± √∞√†√±√∏√®√∞√•√≠√®√•√¨ .h
    file(GLOB srcs "*.cpp")
#√Ñ√Æ√°√†√¢√´√ø√•√¨ √¢ √Ø√•√∞√•√¨√•√≠√≠√≥√æ srcs √¢√±√• √¥√†√©√´√ª √± √∞√†√±√∏√®√∞√•√≠√®√•√¨ .h
